--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -581,27 +581,195 @@ main>h2:not(:first-child) {
 
 
 /**************************** SOBRE  MÍ ****************************/
-#about-me * {
-    box-sizing: border-box;
-}
-
 #about-me {
-    display: flex;
-    overflow: scroll;
-    padding: 2rem;
-    scroll-snap-type: x mandatory;
-    scroll-padding: 2rem;
-    border-radius: 12px;
-    gap: 1rem;
+    --height-about-me-slider: 50rem;
+
+    position: relative;
+    width: 100%;
+    height: var(--height-about-me-slider);
+    color: #454e56;
 }
 
-#about-me .item {
-    width: 2rem;
-    flex: 0 0 100%;
-    padding: 2rem;
-    border-radius: 12px;
-    scroll-snap-align: start;
+@keyframes slidein {
+    0% {
+        top: calc(-1 * var(--height-about-me-slider));
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+        top: 0px;
+    }
 }
+
+@keyframes slideout {
+    0% {
+        top: 0;
+        opacity: 1;
+    }
+
+    100% {
+        top: calc(-1 * var(--height-about-me-slider));
+        opacity: 0;
+    }
+}
+
+#about-me #scene {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    width: 100%;
+    height: var(--height-about-me-slider);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    background-color: #ffffff;
+    overflow: hidden;
+}
+
+#about-me #scene #left-zone {
+    display: flex;
+    width: 15%;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+}
+
+#about-me #scene #left-zone .list {
+    display: flex;
+    list-style: none;
+    align-content: stretch;
+    flex-direction: column;
+    flex-grow: 1;
+    margin: 0;
+    padding: 0;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"] {
+    display: none;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]~label {
+    opacity: 0.5;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    border-right: solid 5px transparent;
+    transition: all 0.3s;
+}
+
+#about-me #scene #left-zone .list li.item:not(:last-child) input[type="radio"]~label{
+    border-bottom: 1px solid #454e56;
+}
+
+#about-me #scene #left-zone .list li.item label svg {
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+#about-me #scene #left-zone .list li.item label span {
+    padding-left: 1rem;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]~label:first-letter {
+    text-transform: uppercase;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]~label:hover {
+    opacity: 0.75;
+    cursor: pointer;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]~.content {
+    position: absolute;
+    width: 85%;
+    left: 15%;
+    padding-right: 5%;
+    top: -100%;
+    height: 100%;
+    animation-duration: 0.75s;
+    animation-name: slideout;
+    animation-timing-function: ease-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]~.content.content_lluvia h1 {
+    color: #d64541;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]~.content.content_estudios h1 {
+    color: #f5d76e;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]~.content.content_videojuegos h1 {
+    color: #00b16a;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]~.content.content_musica h1 {
+    color: #f27935;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]~.content h1:first-letter {
+    text-transform: uppercase;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]~.content p {
+    max-width: 50%;
+    text-align: center;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]:checked~label {
+    opacity: 1;
+    animation: all 1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]:checked~label.label_slider_1 {
+    color: #d64541;
+    fill: #d64541;
+    border-right-color: #d64541;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]:checked~label.radio_slider_2 {
+    color: #f5d76e;
+    fill: #f5d76e;
+    border-right-color: #f5d76e;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]:checked~label.radio_slider_3 {
+    color: #00b16a;
+    fill: #00b16a;
+    border-right-color: #00b16a;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]:checked~label.radio_slider_4 {
+    color: #f27935;
+    fill: #f27935;
+    border-right-color: #f27935;
+}
+
+#about-me #scene #left-zone .list li.item input[type="radio"]:checked~.content {
+    animation-duration: 0.75s;
+    animation-name: slidein;
+    animation-fill-mode: forwards;
+    animation-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+
+@media (max-width: 768px) {
+    #title-about-me,
+    #about-me {
+        display: none;
+    }
+}
+
 
 /*******************************************************************/
 
