--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -765,11 +765,11 @@ a:hover {
 .slider .show-slider #slide-4 .background-slide-container {
     background: url(../../assets/img/fondo-videojuegos.jpg) no-repeat center;
     background-size: cover;
-    filter: brightness(.75) blur(.75px);
+    filter: brightness(.65) blur(.75px);
 }
 
 .slider:has(.select-slider input[type="radio"][value="slide-4"]:checked) .show-slider:hover #slide-4 .background-slide-container {
-    filter: brightness(1) blur(0);
+    filter: brightness(.9) blur(0);
 }
 
 .slider .show-slider .slide-container p {
