--- a/style/index.css
+++ b/style/index.css
@@ -1,224 +1,132 @@
-body {
-    margin: 0;
-    display: grid;
-    place-content: center;
-    height: 100vh;
-    background-color: rgb(32, 32, 32);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+@import "colors.css";
+@import "fonts.css";
+@import "links.css";
+@import "buttons.css";
+
+:root {
+	--page-space: 20px;
 }
 
-#container-first-page {
-    position: relative;
-    margin: auto;
-    background-color: transparent;
-    width: 70vw;
-    max-width: 1400px;
-    border-radius: 15px;
-    border: 1px solid rgba(255, 255, 255);
-    box-shadow:
-        0 0 5px rgb(255, 255, 255),
-        inset 0 0 5px rgb(255, 255, 255),
-        0 0 8px rgb(255, 255, 255),
-        inset 0 0 8px rgb(255, 255, 255),
-        0 0 13px rgb(0, 255, 170),
-        inset 0 0 13px rgb(0, 255, 170);
-    transition: all 0.25s;
-}
+html {
+	font-family: "NotoSans", "Gill Sans", "Gill Sans MT", Calibri,
+		"Trebuchet MS", sans-serif;
 
-#container-first-page:hover {
-    box-shadow:
-        0 0 3px rgb(255, 255, 255),
-        inset 0 0 3px rgb(255, 255, 255),
-        0 0 6px rgb(255, 255, 255),
-        inset 0 0 6px rgb(255, 255, 255),
-        0 0 10px rgb(0, 255, 170),
-        inset 0 0 10px rgb(0, 255, 170);
-}
+	body {
+		margin: 0;
+		min-height: 100dvh;
+		background-color: var(--primary_color-dark-2);
+		color: var(--text_color_white);
 
-#container-elements {
-    margin: 5% 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-}
+		.max-width {
+			max-width: 1280px;
+			padding-inline: var(--page-space);
+			margin: auto;
+		}
 
-#container-elements>* {
-    margin: 0 5%;
-}
+		header.menu {
+			z-index: 1;
+			position: sticky;
+			top: 0;
+			background-color: var(--primary_color-dark-2);
 
-/* IMAGE */
-#container-elements .round-img-container {
-    width: 35%;
-    aspect-ratio: 1/1;
-    box-sizing: border-box;
-    overflow: hidden;
-    background-color: rgb(0, 255, 170);
-    border-radius: 50%;
-    box-shadow:
-        0 0 3px rgb(255, 255, 255),
-        inset 0 0 3px rgb(255, 255, 255),
-        0 0 6px rgb(255, 255, 255),
-        inset 0 0 6px rgb(255, 255, 255),
-        0 0 10px rgb(0, 255, 170),
-        inset 0 0 10px rgb(0, 255, 170);
-    transition: all 0.2s;
-}
+			> .max-width {
+				display: grid;
+				grid-template-columns: auto 1fr auto;
+				align-items: center;
+				padding-block: var(--page-space);
 
-#container-elements .round-img-container img {
-    width: 100%;
-    height: 100%;
-}
+				.logo {
+					max-width: 150px;
+					transition: filter 0.3s;
 
-/* RIGHT PART */
-#container-elements .right-part {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-}
+					&::after {
+						content: none;
+					}
 
-/* H1 */
-#container-elements h1 {
-    font-size: 3rem;
-    color: rgb(255, 255, 255);
-    text-shadow: 0 0 3px rgb(0, 255, 170);
-}
+					&:hover {
+						filter: drop-shadow(0 0 3px var(--text_color_white));
+					}
 
+					img {
+						width: 100%;
+						object-fit: container;
+					}
+				}
 
-/* SEE MORE */
-.see-more {
-    --color-neon: rgb(0, 255, 170);
-    font-weight: lighter;
-    font-size: 2rem;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    padding: .5vw 3.5vw;
-    text-transform: uppercase;
-    animation-name: seeMoreBtnNeon;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-}
+				nav ul {
+					display: flex;
+					gap: 1rem;
+					justify-content: center;
+				}
+			}
+		}
 
-@keyframes seeMoreBtnNeon {
-    0%, 18%, 22%, 25%, 53%, 57%, 100% {
-        box-shadow:
-            0 0 3px rgb(255, 255, 255),
-            inset 0 0 3px rgb(255, 255, 255),
-            0 0 6px rgb(255, 255, 255),
-            inset 0 0 6px rgb(255, 255, 255),
-            0 0 10px var(--color-neon),
-            inset 0 0 10px var(--color-neon);
-        text-shadow:
-            0 0 3px rgb(255, 255, 255),
-            0 0 5px var(--color-neon);
-    }
+		main {
+			position: relative;
 
-    20%, 24%, 55% {
-        box-shadow: 0 0 10px rgb(255, 255, 255);
-        text-shadow: none;
-    }
-}
+			.background-gradient {
+				z-index: -2;
+				position: fixed;
+				top: 0;
+				height: 100dvh;
+				left: 0;
+				right: 0;
+				background-image: linear-gradient(
+					var(--primary_color-dark-2),
+					var(--primary_color-dark-1)
+				);
+			}
 
-.see-more:hover {
-    --color-neon: rgb(255, 5, 51);
-}
+			#top {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				gap: 30px;
 
-/*
-.see-more span::after {
-    content: "  🠲";
-}*/
+				.me-title {
+					display: flex;
+					flex-direction: column;
+					align-items: center;
 
-/* 🠲 ➧ 🡆 */
+					img {
+						max-width: 500px;
+						object-fit: contain;
+						width: 100%;
+						aspect-ratio: 222/257;
+					}
 
-/* SOCIAL NETWORKS */
+					h1 {
+						font-size: 7.5rem;
+						line-height: 7.5rem;
+						font-weight: 550;
+						font-style: italic;
+						font-variation-settings: "wdth" 62.5;
+						letter-spacing: 20px;
+						text-transform: uppercase;
+						text-shadow: 0 0 4px var(--text_color_white);
+						margin-top: -4rem;
+					}
 
-ul {
-    margin: 2em 0;
-    padding: 0;
-    display: flex;
-}
+					h2 {
+						font-size: 2rem;
+						font-weight: 500;
+					}
+				}
 
-ul li {
-    list-style: none;
-}
+				.links {
+					display: flex;
+					gap: 5%;
 
-ul li:not(:first-child) {
-    margin-left: 1.5rem;
-}
+					a img {
+						width: 2rem;
+						aspect-ratio: 1/1;
+					}
+				}
+			}
+		}
 
-ul li a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(255, 255, 255);
-    width: 70px;
-    height: 70px;
-    box-shadow:
-        0 0 3px rgb(255, 255, 255),
-        0 0 6px rgb(255, 255, 255),
-        0 0 10px rgb(0, 255, 170);
-    border-radius: 50%;
-    transition: ease-in-out 0.25s;
-}
-
-ul li a svg {
-    width: 50%;
-    height: 50%;
-}
-
-ul li a svg path {
-    fill: rgb(0, 0, 0);
-    transition: ease-in-out 0.2s;
-}
-
-ul li a:hover svg path {
-    fill: rgb(255, 255, 255);
-}
-
-ul li a:hover {
-    background-color: rgba(255, 255, 255, 0);
-    box-shadow:
-        0 0 3px rgb(255, 255, 255),
-        inset 0 0 3px rgb(255, 255, 255),
-        0 0 6px rgb(255, 255, 255),
-        inset 0 0 6px rgb(255, 255, 255),
-        0 0 10px rgb(0, 255, 170),
-        inset 0 0 10px rgb(0, 255, 170);
-}
-
-
-
-@media (max-width: 705px) {
-    #container-elements {
-        flex-direction: column;
-    }
-
-
-    /* IMAGE  */
-    #container-elements .round-img-container {
-        width: 75%;
-        margin-top: 1rem;
-    }
-}
-
-@media (max-width: 375px) {
-
-    /* H1 */
-    #container-elements h1 {
-        font-size: 2rem;
-    }
-
-    /* SEE MORE */
-    .see-more {
-        font-size: 1.5rem;
-    }
-
-    /* SOCIAL NETWORKS */
-    ul li a {
-        width: 50px;
-        height: 50px;
-    }
+		footer {
+			background-color: var(--primary_color-dark-1);
+		}
+	}
 }
