--- a/style/index.css
+++ b/style/index.css
@@ -57,12 +57,14 @@ html {
 					display: flex;
 					gap: 1rem;
 					justify-content: center;
+					font-size: 1.25rem;
 				}
 			}
 		}
 
 		main {
 			position: relative;
+			padding-block: 5dvh;
 
 			.background-gradient {
 				z-index: -2;
@@ -94,7 +96,11 @@ html {
 						object-fit: contain;
 						width: 100%;
 						aspect-ratio: 222/257;
-						mask-image: linear-gradient(to bottom, black 85%, transparent 100%);
+						mask-image: linear-gradient(
+							to bottom,
+							black 85%,
+							transparent 100%
+						);
 					}
 
 					h1 {
@@ -110,14 +116,14 @@ html {
 					}
 
 					h2 {
-						font-size: 2rem;
+						font-size: 2.5rem;
 						font-weight: 500;
 					}
 				}
 
 				.links {
 					display: flex;
-					gap: 5%;
+					gap: 25px;
 
 					a img {
 						width: 2rem;
