--- a/style/buttons.css
+++ b/style/buttons.css
@@ -5,10 +5,11 @@
 	border: 1px solid var(--primary_color-light-2);
 	border-radius: 5rem;
 	padding: 1rem 1.5rem;
-	transition: background-color 0.3s;
+	transition: all 0.3s;
 
 	&:hover {
 		background-color: var(--primary_color);
+		box-shadow: 0 0 2px var(--text_color_white);
 	}
 
 	&.all-round {
