--- a/style/index.css
+++ b/style/index.css
@@ -152,7 +152,7 @@ html {
 				flex-direction: column;
 				gap: 50px;
 
-				article {
+				article.card {
 					display: grid;
 					grid-template-columns: auto 1fr;
 					gap: 2.5rem;
@@ -208,10 +208,61 @@ html {
 							padding-top: 0.75rem;
 
 							li {
-								font-size: 1rem;
 								text-wrap: balance;
 								text-wrap: pretty;
 
+								&::before {
+									content: "\2713";
+									padding-right: 0.25rem;
+									font-weight: bold;
+									color: var(--secondary_color_2-light-2);
+								}
+							}
+						}
+					}
+				}
+			}
+
+			#me {
+				display: flex;
+				flex-direction: column;
+				gap: 50px;
+
+				article {
+					display: flex;
+					gap: 25px;
+
+					.image {
+						width: 100%;
+						shape-outside: circle(50%);
+						width: 100%;
+
+						img {
+							max-width: 100%;
+							border-radius: 50%;
+							box-shadow: 0 0 2px var(--text_color_white);
+						}
+					}
+
+					.texts {
+						display: flex;
+						flex-direction: column;
+						gap: 1rem;
+						text-wrap: balance;
+						text-wrap: pretty;
+						padding-inline: 2.5rem;
+
+						.underline {
+							text-decoration: underline;
+						}
+
+						.yellow {
+							color: var(--complementary_color-light-1);
+							font-weight: bold;
+						}
+
+						ul {
+							li {
 								&::before {
 									content: "\2713";
 									padding-right: 0.25rem;
